--- a/package.json
+++ b/package.json
@@ -12,24 +12,16 @@
     "@types/node": "20.2.3",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "autoprefixer": "^10.4.18",
+    "dotenv": "^16.0.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
+    "postcss": "^8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4",
-    "@iconscout/react-unicons": "^1.1.6",
-    "@chakra-ui/anatomy": "^2.1.1",
-    "@chakra-ui/next-js": "^2.1.1",
-    "@chakra-ui/react": "^2.5.4",
-    "@chakra-ui/theme-tools": "^2.0.16",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@next/font": "^13.3.0",
-    "dotenv": "^16.0.3",
-    "framer-motion": "^6",
-    "react-dropzone": "^14.2.3",
-    "react-icons": "^4.8.0"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.0.4"
   },
   "devDependencies": {
     "@types/jest": "^29.2.2",
