--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
     "prettier": "^2.8.7",
     "ts-node": "^10.9.1",
     "typescript": "4.8.4"
-  }
+  },
+  "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
