--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "dotenv": "^16.0.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "install": "^0.13.0",
     "next": "13.4.3",
     "postcss": "^8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "5.0.4"
